# omstu-praktikum-4

./: .gitignore  main.py  pyproject.toml
homework/: animals.py  config.py  ecosystem.py  main.py  plants.py  slider.py  snapshot.py  tests.py  world.py
lab-6/: main.py
lab-7/: animals.py  colors.py  main.py  plants.py  rng.py  world.py
lab-8/: animals.py  config.py  main.py  tests.py  time_of_day.py  world.py
